Serve statics with an override

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,5 +4,10 @@ version = "0.1.0"
 authors = ["Richo Healey <richo@psych0tik.net>"]
 
 [dependencies]
+# Iron
 iron = "*"
+mount = "*"
+staticfile = "*"
+
+# Stripe
 stripe = "*"
